<resources>
    <string name="app_name">Memo</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>

    <!--Main Activity-->
    <string name="delete_text">删除</string>
    <string name="add_text">添加</string>
    <string name="confirm_text">确定</string>
    <string name="cancel_text">取消</string>
    <string name="delete_events_msg">您确定要删除这些备忘录吗？</string>
    <string name="delete_event_msg">您确定要删除这个备忘录吗？</string>
    <string name="no_event_selected_msg">请至少选择一个再继续操作。</string>
    <string name="delete_successful">删除成功。</string>
    <string name="delete_failed">删除失败。</string>
    <string name="search_text">搜索</string>
    <string name="event_text">事件：</string>
    <string name="description_text">描述：</string>
    <string name="remind_time_text">提醒时间：</string>
    <string name="last_update_text">上次编辑：</string>
    <string name="please_choose_date">请选择日期：</string>
    <string name="please_choose_time">请选择时间：</string>
    <string name="enter_edit_mode">您已进入编辑模式。</string>
    <string name="update_successful">更新成功。</string>
    <string name="update_failed">更新失败。</string>
    <string name="create_successful">添加成功。</string>
    <string name="create_failed">添加失败。</string>
    <string name="is_important_event">是否为重要事件：</string>
    <string name="event_can_not_empty">事件不能为空。</string>
    <string name="content_can_not_empty">内容不能为空。</string>
    <string name="remind_time_can_not_empty">提醒时间不能为空。</string>
    <string name="clock_event_msg_template">您有事件：%1$s，请记得去完成！</string>
    <string name="remind_time_deprecated">提醒时间无效，请重新选择。</string>
    <string name="invalid_remind_time_format">提醒时间格式错误，请重新选择。</string>
</resources>
