<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">
    <include layout="@layout/action_bar_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/action_bar">
    </include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rl_content"
        android:layout_below="@id/action_bar">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:id="@+id/ll_update_time"
            android:gravity="center">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/last_update_text"
            android:textSize="16sp"
            android:textColor="@color/gray2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:text="2017年04月20日 12：45"
                android:gravity="center"
                android:textColor="@color/gray2"
                android:id="@+id/tv_last_edit_time"/>
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/ll_update_time"
            android:layout_above="@id/rl_footer"
            android:padding="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:id="@+id/ll_event">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="@string/event_text"
                    android:id="@+id/tv_event_text"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/ed_title"
                    android:singleLine="true"
                    android:ellipsize="end"
                    android:textSize="17sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_below="@id/ll_event"
                android:layout_marginTop="5dp"
                android:id="@+id/ll_remind_time">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/tv_remind_time_text"
                    android:text="@string/remind_time_text"
                    android:textSize="17sp"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="17sp"
                    android:text="2017-04-28 23:27"
                    android:id="@+id/tv_remind_time_picker"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_below="@+id/ll_remind_time"
                android:layout_marginTop="10dp"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_text"
                        android:textSize="17sp"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/is_important_event"
                        android:textSize="17sp"
                        android:layout_marginStart="100dp"/>
                    <CheckBox
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/chb_is_important"/>
                </LinearLayout>
                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/scroll_view_border"
                    android:id="@+id/scroll_view"
                    android:padding="3dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/ed_content"
                        android:background="@color/transparent"/>
                </ScrollView>
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rl_footer"
            android:layout_alignParentBottom="true"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            android:paddingBottom="10dp"
            android:layout_marginTop="1dp">
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:src="@drawable/ic_delete_event"
                android:layout_alignParentStart="true"
                android:id="@+id/iv_delete"
                />
            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_alignParentEnd="true"
                android:src="@drawable/ic_edit2"
                android:id="@+id/iv_edit"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>